--- a/build.gradle
+++ b/build.gradle
@@ -12,22 +12,8 @@ buildscript {
 allprojects {
 
     ext {
-        //Executed Magically
-        writeProcessors = {
 
-            if("$module.name" == "Annotation") {
-                new File(projectDir, "resources/META-INF/services/").mkdirs()
-                def processorFile = new File(projectDir, "resources/META-INF/services/javax.annotation.processing.Processor")
-                def text = new StringBuilder()
-                def files = new File(projectDir, "src/")
-                files.eachFileRecurse(groovy.io.FileType.FILES) { file ->
-                    if (file.name.endsWith(".java") && (file.text.contains(" extends BaseProcessor") || (file.text.contains(" extends AbstractProcessor") && !file.text.contains("abstract class")))) {
-                        text.append(file.path.substring(files.path.length() + 1)).append("\n")
-                    }
-                }
-                processorFile.text = text.toString().replace(".java", "").replace("/", ".").replace("\\", ".")
-            }
-            println "> Task Atom:$module.name:Annotation-Processor"
+        smh = {
             delete "src-gen/"
 
         }
@@ -64,14 +50,14 @@ subprojects {
     }
 
     task pre {
-        writeProcessors()
+        smh()
     }
     dependencies {
         compileJava.dependsOn(pre)
 
     }
 
-    tasks.withType(JavaCompile){
+    tasks.withType(JavaCompile) {
         new File(projectDir, "resources/").mkdirs()
         new File(projectDir, "src/").mkdirs()
         new File(projectDir, "src-gen/").mkdirs()
