who the f include this garbage

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,9 @@ android/libs/
 .idea/compiler.xml
 .idea/gradle.xml
 /.idea/
+/Atomic/build/
+/Test/build/
+/Log/build/
+/Log/src-gen/
+/Test/src-gen/
+/Atomic/src-gen/
