--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -1,4 +1,6 @@
 
 dependencies{
     compile group: 'org.reflections', name: 'reflections', version: '0.9.12'
+    compile group: 'org.ow2.asm', name: 'asm', version: '9.0-beta'
+
 }
