--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -1,5 +1,6 @@
 
 dependencies{
+    implementation 'junit:junit:4.12'
     compile group: 'org.reflections', name: 'reflections', version: '0.9.12'
     compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.10.14'
 
