--- a/Aindustry/build.gradle
+++ b/Aindustry/build.gradle
@@ -2,6 +2,6 @@ ext {
     MindustryHash = "3b5d6860d6"
 }
 dependencies {
-    api aproj(":Atomic")
+    implementation aproj(":Atomic")
     compileOnly "com.github.Anuken:Mindustry:$MindustryHash"
 }
