--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -10,7 +10,7 @@ dependencies{
 }
 jar{
     archiveFileName = "${project.archivesBaseName}.jar"
-    subprojects.each { project ->
-        from project.configurations.archives.allArtifacts.files.collect { zipTree(it) }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
