--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -1,10 +1,10 @@
 
 dependencies{
-    testImplementation 'junit:junit:4.12'
     compile group: 'org.reflections', name: 'reflections', version: '0.9.12'
     compileOnly group: 'com.google.googlejavaformat', name: 'google-java-format', version: '1.7'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compileOnly group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.1.0'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 
 
 
