--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -26,7 +26,7 @@ task jarAndroid{
         def dependencies = files.collect{ "--classpath $it.path" }.join(" ")
 
         //dex and desugar files - this requires d8 in your PATH
-        doExec("d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar")
+        doExec("d8 $dependencies --min-api 14 --output ${project.archivesBaseName}.jar ${project.archivesBaseName}.jar")
     }
 }
 sourceCompatibility = "1.7"
