--- a/Desktop/build.gradle
+++ b/Desktop/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation aproj(":Atomic")
 }
 jar{
+    dependsOn ":Atomic:jar"
     archiveFileName = "${project.archivesBaseName}.jar"
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
