--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -7,6 +7,10 @@ dependencies {
 ext{
     sdkVersion = '30'
     sdkRoot = System.getenv("ANDROID_HOME")
+    doExec = { cmd ->
+        def proc = cmd.execute(null, new File("$buildDir/libs"))
+        proc.waitForProcessOutput(System.out, System.err)
+    }
 }
 
 jar{
@@ -24,9 +28,9 @@ task jarAndroid{
         //collect dependencies needed for desugaring
         def files = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")])
         def dependencies = files.collect{ "--classpath $it.path" }.join(" ")
-
+        println dependencies
         //dex and desugar files - this requires d8 in your PATH
-        doExec("d8 $dependencies --min-api 14 --output ${project.archivesBaseName}.jar ${project.archivesBaseName}.jar")
+        doExec("d8 $dependencies --min-api 14 ${project.archivesBaseName}.jar")
     }
 }
 sourceCompatibility = "1.7"
