--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -28,7 +28,10 @@ task jarAndroid{
         //collect dependencies needed for desugaring
         def files = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")])
         def dependencies = files.collect{ "--classpath $it.path" }.join(" ")
-        println dependencies
+        println "runtimeClasspath:"
+        for(String e : configurations.runtimeClasspath.asList())
+            println e
+
         //dex and desugar files - this requires d8 in your PATH
         doExec("d8 $dependencies --min-api 14 ${project.archivesBaseName}.jar")
     }
