--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 ext{
     sdkVersion = '30'
     sdkRoot = System.getenv("ANDROID_HOME")
+    sdkD8 = "."+sdkRoot+'/build-tools/30.0.0-rc2/d9'
     doExec = { cmd ->
         def proc = cmd.execute(null, new File("$buildDir/libs"))
         proc.waitForProcessOutput(System.out, System.err)
@@ -32,8 +33,9 @@ task jarAndroid{
         for(String e : configurations.runtimeClasspath.asList())
             println e
 
+        println sdkD8
         //dex and desugar files - this requires d8 in your PATH
-        doExec("d8 $dependencies --min-api 14 ${project.archivesBaseName}.jar")
+        doExec("${sdkD8} $dependencies --min-api 14 ${project.archivesBaseName}.jar")
     }
 }
 sourceCompatibility = "1.7"
