--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -1,4 +1,5 @@
-
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 dependencies{
     compile group: 'org.reflections', name: 'reflections', version: '0.9.12'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
