--- a/Desktop/build.gradle
+++ b/Desktop/build.gradle
@@ -1,3 +1,6 @@
+import java.nio.file.Files
+import java.nio.file.StandardOpenOption
+
 sourceCompatibility = 14
 targetCompatibility = 14
 repositories {
@@ -15,5 +18,25 @@ jar{
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
+    StringBuilder sb = new StringBuilder()
+    File txt = new File(sourceSets.main.resources.srcDirs[0], "dependencies-atomic-desktop")
+    txt.delete()
+    configurations.compileOnly.allDependencies.each { dep ->
+        sb.append('groupId=').append(dep.group).append('\n')
+        sb.append('artifactId=').append(dep.name).append('\n')
+        sb.append('version=').append(dep.version).append('\n')
+        sb.append('type=').append(dep.reason).append('\n\n')
+    }
+    ArrayList<String> done = new ArrayList<>();
+    project.repositories.each {
+        String url = it.url
+        if (url == null) return
+        if (!url.toString().startsWith("http")) return
+        url = url.endsWith("/") ? url.substring(0, url.length() - 1) : url
+        if (done.contains(url.toString())) return
+        done.add(url.toString())
+        sb.append("url=").append(url).append("\n")
+    }
+    Files.write(txt.toPath(), sb.toString().getBytes(), StandardOpenOption.WRITE, StandardOpenOption.CREATE)
 
 }
