--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -4,8 +4,12 @@ import java.nio.file.StandardOpenOption
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 dependencies{
-    compile group: 'org.reflections', name: 'reflections', version: '0.9.12'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    compile (group: 'org.reflections', name: 'reflections', version: '0.9.12'){
+        because("provided")
+    }
+    compile (group: 'com.google.code.gson', name: 'gson', version: '2.8.6'){
+        because("provided")
+    }
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
 }
