--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -11,7 +11,9 @@ dependencies{
         because("provided")
     }
     testCompile group: 'junit', name: 'junit', version: '4.12'
-
+    compileOnly( group: 'org.jetbrains', name: 'annotations', version: '20.1.0'){
+        because("compile")
+    }
 }
 tasks.withType(Jar){
     archiveFileName = "${project.archivesBaseName}.jar"
