--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,4 @@ android/libs/
 /Aindustry/build/tmp/jar/MANIFEST.MF
 /Aindustry/build/tmp/compileJava/source-classes-mapping.txt
 Aindustry/build/resources/Main/mod.json
+/Atomic/src-gen/
