--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -4,8 +4,9 @@ import java.nio.file.StandardOpenOption
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 dependencies{
-    compile (group: 'io.github.classgraph', name: 'classgraph', version: '4.8.98'){
+    compile (group: 'org.reflections', name: 'reflections', version: '0.9.12'){
         because("provided")
+        exclude module: 'javassist'
     }
     compile (group: 'com.google.code.gson', name: 'gson', version: '2.8.6'){
         because("provided")
