--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -21,7 +21,7 @@ tasks.withType(Jar){
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
     StringBuilder sb = new StringBuilder()
-    File txt = new File(sourceSets.main.resources.srcDirs[0], "dependencies-atomic")
+    File txt = new File(project.getProjectDir(), "resources/dependencies-atomic")
     txt.delete()
     configurations.compileOnly.allDependencies.each { dep ->
         sb.append('groupId=').append(dep.group).append('\n')
