--- a/Desktop/build.gradle
+++ b/Desktop/build.gradle
@@ -26,7 +26,7 @@ jar{
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
     StringBuilder sb = new StringBuilder()
-    File txt = new File(sourceSets.main.resources.srcDirs[0], "dependencies-atomic-desktop")
+    File txt = new File(project.getProjectDir(), "resources/dependencies-atomic-desktop")
     txt.delete()
     configurations.compileOnly.allDependencies.each { dep ->
         sb.append('groupId=').append(dep.group).append('\n')
