--- a/Desktop/build.gradle
+++ b/Desktop/build.gradle
@@ -44,6 +44,7 @@ jar{
         done.add(url.toString())
         sb.append("url=").append(url).append("\n")
     }
+    txt.parentFile.mkdirs();
     Files.write(txt.toPath(), sb.toString().getBytes(), StandardOpenOption.WRITE, StandardOpenOption.CREATE)
 
 }
