--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,15 @@
 buildscript {
     repositories {
+        mavenLocal()
         mavenCentral()
-        jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url "https://dl.bintray.com/konsoletyper/teavm" }
+        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        maven { url 'https://jitpack.io' }
         google()
+
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 }
 
@@ -14,12 +19,12 @@ allprojects {
 
 
     repositories {
+        mavenLocal()
         mavenCentral()
-        jcenter()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url "https://dl.bintray.com/konsoletyper/teavm" }
         google()
-        maven{ url 'https://www.jitpack.io' }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        maven { url 'https://jitpack.io' }
     }
 
 }
