--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,28 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'java-library'
+    apply plugin: "maven-publish"
 
-
-    group 'com.o7-Fire'
+    group 'org.o7-Fire.Glopion.Bootstrapper'
     version '3.0.1'
 
+    publishing {
+        repositories {
+            maven {
+                name = "GitHubPackages"
+                url = uri("https://maven.pkg.github.com/o7-Fire/Atomic-Library")
+                credentials {
+                    username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+                    password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+                }
+            }
+        }
+        publications {
+            gpr(MavenPublication) {
+                from(components.java)
+            }
+        }
+    }
     ext {
         smh = {
             delete "src-gen/"
