--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -16,7 +16,7 @@ dependencies{
     }
 }
 jar{
-    archiveFileName = "atomic.jar"
+    archiveFileName = "${project.archivesBaseName}.jar"
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
