--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ subprojects {
                 url = uri("https://maven.pkg.github.com/o7-Fire/Atomic-Library")
                 credentials {
                     username = "o7-Fire"
-                    password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+                    password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
                 }
             }
         }
