--- a/Desktop/build.gradle
+++ b/Desktop/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly aproj(":atomic")
+    compileOnly aproj(":Atomic")
     compileOnly ('com.github.javaparser:javaparser-core:3.16.2'){
         because("runtime")
     }
