--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+        dependencies {
+
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
+    }
     }
 }
 
@@ -33,7 +37,15 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'java-library'
+plugins {
+  id "org.sonarqube" version "3.3"
+}
 
+sonarqube {
+  properties {
+    property "sonar.projectKey", "o7-Fire_Atomic-Library"
+  }
+}
 
     group 'org.o7.Fire'
     version '4.0.3'
