--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,7 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'java-library'
-plugins {
-  id "org.sonarqube" version "3.3"
-}
-
+apply plugin: "org.sonarqube"
 sonarqube {
   properties {
     property "sonar.projectKey", "o7-Fire_Atomic-Library"
