--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ apply plugin: "org.sonarqube"
 sonarqube {
     properties {
         property "sonar.projectKey", "o7-Fire_Atomic-Library"
+        property "sonar.organization", "o7-Fire"
     }
 }
 allprojects {
@@ -45,7 +46,7 @@ subprojects {
     sonarqube {
         properties {
             property "sonar.projectKey", "o7-Fire_Atomic-Library"
-            property "sonar.organization", "o7-ire"
+            property "sonar.organization", "o7-Fire"
         }
     }
 
