--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: "org.sonarqube"
 sonarqube {
     properties {
         property "sonar.projectKey", "o7-Fire_Atomic-Library"
-        property "sonar.organization", "o7-Fire"
+        property "sonar.organization", "o7-ire"
     }
 }
 allprojects {
@@ -46,7 +46,7 @@ subprojects {
     sonarqube {
         properties {
             property "sonar.projectKey", "o7-Fire_Atomic-Library"
-            property "sonar.organization", "o7-Fire"
+            property "sonar.organization", "o7-ire"
         }
     }
 
