--- a/Atomic/build.gradle
+++ b/Atomic/build.gradle
@@ -1,23 +1,20 @@
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-dependencies{
-    implementation (group: 'org.reflections', name: 'reflections', version: '0.9.12'){
-        because("provided")
-    }
-    implementation (group: 'com.google.code.gson', name: 'gson', version: '2.8.6'){
-        because("provided")
-    }
-    testImplementation( group: 'junit', name: 'junit', version: '4.12')
-    compileOnly( group: 'org.jetbrains', name: 'annotations', version: '20.1.0'){
-        because("compile")
-    }
+dependencies {
+    compileOnly(group: 'org.reflections', name: 'reflections', version: '0.9.12')
+    compileOnly(group: 'com.google.code.gson', name: 'gson', version: '2.8.6')
+    compileOnly group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0-beta-4'
+    compileOnly group: 'org.jsoup', name: 'jsoup', version: '1.14.1'
+    testImplementation(group: 'org.reflections', name: 'reflections', version: '0.9.12')
+    testImplementation(group: 'com.google.code.gson', name: 'gson', version: '2.8.6')
+    testImplementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0-beta-4'
+    testImplementation group: 'org.jsoup', name: 'jsoup', version: '1.14.1'
 }
+
 jar{
     archiveFileName = "${project.archivesBaseName}.jar"
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
-
-
 }
 
