--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,17 +7,20 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build:
-    name: Build
+  test:
+    strategy:
+      matrix:
+        version: [9, 11, 14, 17]
+    name: Build & Test ${{ matrix.version }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 11
+      - name: Set up JDK ${{ matrix.version }}
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: ${{ matrix.version }}
       - name: Cache SonarQube packages
         uses: actions/cache@v1
         with:
