--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master # or the name of your main branch
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize]
 
 jobs:
   test:
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         version: [9, 11, 14, 17]
-    name: Build & Test ${{ matrix.version }}
+    name: Build & Test Java ${{ matrix.version }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
