--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [9, 11, 14, 17]
+        version: [8, 9, 11, 14, 17]
     name: Build & Test Java ${{ matrix.version }}
     runs-on: ubuntu-latest
     steps:
