--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ subprojects {
     apply plugin: 'java-library'
     apply plugin: "org.sonarqube"
     apply plugin: 'jacoco'
+    apply plugin: 'maven-publish'
+
     group 'org.o7.Fire'
     version '5.0'
     sonarqube {
@@ -163,4 +165,26 @@ subprojects {
 
     }
 
+}
+configure([":Atomic", ":Desktop"].collect{project(it)}){
+    java{
+        withJavadocJar()
+        withSourcesJar()
+    }
+
+    publishing{
+        publications{
+            maven(MavenPublication){
+                from components.java
+            }
+        }
+    }
+}
+task resolveDependencies{
+    doLast{
+        rootProject.allprojects{ project ->
+            Set<Configuration> configurations = project.buildscript.configurations + project.configurations
+            configurations.findAll{c -> c.canBeResolved}.forEach{c -> c.resolve()}
+        }
+    }
 }
